# mini-aspire

./: .gitignore  .pylintrc  README.md  TODO  pyproject.toml  requirements.txt  setup.cfg
app/Http/Controllers/: LoanController.php
app/Http/Requests/: StoreLoanRequest.php  UpdateLoanRequest.php
app/Models/: Loan.php  User.php
app/Policies/: LoanPolicy.php
app/Providers/: AuthServiceProvider.php
database/factories/: LoanFactory.php  UserFactory.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2021_11_30_183648_create_loans_table.php
database/seeders/: DatabaseSeeder.php  LoanSeeder.php
routes/: api.php
src/mini_aspire/: __main__.py  app.py  apply.py  auth.py  data.py  repay.py
tests/: conftest.py  test_apply.py  test_repay.py
tests/Feature/: ApplyTest.php  RepayTest.php
