[metadata]
name = mini_aspire
version = 1.0.0
author = Hu Jialun
author_email = hujialun@comp.nus.edu.sg
description = Mini aspire API backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SuibianP/mini-aspire
project_urls =
    Bug Tracker = https://github.com/SuibianP/mini-aspire/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src